# rules_nats

./: DESIGN.md  MODULE.bazel  README.md  WORKSPACE  defs.bzl  extensions.bzl
.github/workflows/: ci.yml
config/: BUILD.bazel  nats-values.yaml
private/: BUILD.bazel  health_check.sh.tmpl  install.bzl  nats_test_trampoline.sh  providers.bzl  repositories.bzl  server.bzl  server.sh.tmpl  test.bzl  versions.bzl
private/manifests/: BUILD.bazel  nats.yaml
tests/: BUILD.bazel  pubsub_test.sh
tests/install_smoke/: BUILD.bazel  health_wrapper.sh  install_wrapper.sh  smoke_test.sh
toolchain/: BUILD.bazel  toolchain.bzl
tools/: BUILD.bazel  extensions.bzl  render_nats.sh  repositories.bzl  versions.bzl  writeback.sh
