"""rules_nats — hermetic NATS primitives for Bazel.

Two families in one repo:

  Hermetic server (test-time):
    nats_server         — long-running nats-server; writes
                          $TEST_TMPDIR/<name>.env (NATS_URL) when ready
    nats_health_check   — pairs with nats_server for itest_service
    nats_test           — sh_test macro that auto-launches a nats_server
                          and execs the test with NATS_URL in env

  Cluster install (kind / production):
    nats_install              — applies the pinned NATS Helm chart
    nats_install_health_check — paired readiness probe

Pinned: nats-server v2.14.0, nats CLI v0.4.0, NATS Helm chart 2.12.6.
"""

module(
    name = "rules_nats",
    version = "0.1.0",
)

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")

# rules_shell is part of the public surface — `nats_test` defaults to
# `sh_test`. Bazel 8+ removed `native.sh_test`, so the macro imports
# it from rules_shell. Consumers transitively need rules_shell.
bazel_dep(name = "rules_shell", version = "0.8.0")

# Public binary toolchain: nats-server + nats CLI as a single
# toolchain. Per-platform repos (nats_v2_14_0_<plat>) are
# created by the `nats` extension and exposed as filegroups.
nats = use_extension("//:extensions.bzl", "nats")
nats.version(version = "2.14.0", cli_version = "0.4.0")
use_repo(nats,
    "nats_2_14_0_linux_amd64",
    "nats_2_14_0_linux_arm64",
    "nats_2_14_0_darwin_amd64",
    "nats_2_14_0_darwin_arm64",
)
register_toolchains("@rules_nats//toolchain:all")

# rules_kubectl is a public dep — `nats_install` is a thin macro
# around `kubectl_apply`, so consumers transitively get the launcher.
bazel_dep(name = "rules_kubectl", version = "0.2.0")
git_override(
    module_name = "rules_kubectl",
    remote = "https://github.com/collider-bazel-extensions/rules_kubectl",
    commit = "81b60ab80df46b64c612f2576ffef0a7af98ccb6",  # v0.2.0
)

# ---- dev-only: maintainer chart-render flow + smoke composition -------------

bazel_dep(name = "rules_helm", version = "0.2.1", dev_dependency = True)
git_override(
    module_name = "rules_helm",
    remote = "https://github.com/collider-bazel-extensions/rules_helm",
    commit = "48651387d55f0c50f6d059df246ed73767100afb",  # v0.2.1
)

helm = use_extension("@rules_helm//:extensions.bzl", "helm", dev_dependency = True)
helm.version(version = "3.20.2")
use_repo(helm,
    "helm_linux_amd64",
    "helm_darwin_amd64",
    "helm_darwin_arm64",
)
register_toolchains(
    "@helm_linux_amd64//:toolchain",
    "@helm_darwin_amd64//:toolchain",
    "@helm_darwin_arm64//:toolchain",
    dev_dependency = True,
)

bazel_dep(name = "rules_itest", version = "0.0.52", dev_dependency = True)

bazel_dep(name = "rules_kind", version = "0.1.2", dev_dependency = True)
git_override(
    module_name = "rules_kind",
    remote = "https://github.com/collider-bazel-extensions/rules_kind",
    commit = "b9c4670646f8e3772816f56a048e311d5310a763",  # v0.1.2
)

# Maintainer-side: download the upstream Helm chart .tgz at the
# pinned version. Fires only when rules_nats is the root module
# (is_root guard in the extension).
nats_chart = use_extension(
    "//tools:extensions.bzl",
    "nats_chart",
    dev_dependency = True,
)
nats_chart.version(version = "2.12.6")
use_repo(nats_chart, "nats_chart_2_12_6")
