"""Private build files for rules_nats. Public surface lives in
//:defs.bzl which re-exports from here."""

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

exports_files([
    "server.sh.tmpl",
    "health_check.sh.tmpl",
    "nats_test_trampoline.sh",
])

bzl_library(
    name = "providers",
    srcs = ["providers.bzl"],
)

bzl_library(
    name = "server",
    srcs = ["server.bzl"],
    deps = [":providers"],
)

bzl_library(
    name = "test",
    srcs = ["test.bzl"],
)

bzl_library(
    name = "install",
    srcs = ["install.bzl"],
    deps = ["@rules_kubectl//:defs"],
)
