"""Maintainer-only render flow.

Pipeline:
  @nats_chart_<ver>//:files
                       │
                       ▼  helm_template (rules_helm)
                       ▼
       bazel-bin/tools/nats_<ver>.yaml
                       │
                       ▼  bazel run //tools:render_writeback_<ver>
                       ▼
   private/manifests/nats.yaml (committed; what consumers consume)

NO host helm needed at any point.
"""

load("@rules_helm//:defs.bzl", "helm_template")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

exports_files([
    "render_nats.sh",
    "versions.bzl",
])

# ---- 2.12.6 -----------------------------------------------------------------

helm_template(
    name = "render_nats_2_12_6",
    chart = ["@nats_chart_2_12_6//:files"],
    values = ["//config:nats-values.yaml"],
    namespace = "nats",
    release_name = "nats",
    include_crds = True,
)

sh_binary(
    name = "render_writeback_2_12_6",
    srcs = ["writeback.sh"],
    data = [":render_nats_2_12_6"],
    args = [
        "$(rootpath :render_nats_2_12_6)",
        "private/manifests/nats.yaml",
    ],
    visibility = ["//visibility:public"],
)
