"""Full E2E install smoke for nats_install.

Composition (3-link itest dep chain):
  kind_svc → nats_install_svc → smoke_test

Smoke kubectl-execs into the nats-box pod to add a JetStream
stream + publish + consume against the in-cluster nats Service.
"""

load("@rules_itest//:itest.bzl", "itest_service", "service_test")
load("@rules_kind//:defs.bzl", "kind_cluster", "kind_health_check")
load("@rules_nats//:defs.bzl", "nats_install", "nats_install_health_check")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

kind_cluster(name = "cluster", k8s_version = "1.32")

kind_health_check(name = "cluster_health", cluster = ":cluster")

itest_service(
    name = "kind_svc",
    exe = ":cluster",
    health_check = ":cluster_health",
    tags = ["manual"],
)

nats_install(
    name = "nats_install_bin",
    tags = ["manual"],
)

nats_install_health_check(
    name = "nats_health_bin",
    tags = ["manual"],
)

sh_binary(
    name = "nats_install_wrapper",
    srcs = ["install_wrapper.sh"],
    data = [":nats_install_bin"],
)

sh_binary(
    name = "nats_health_wrapper",
    srcs = ["health_wrapper.sh"],
    data = [":nats_health_bin"],
)

itest_service(
    name = "nats_install_svc",
    exe = ":nats_install_wrapper",
    deps = [":kind_svc"],
    health_check = ":nats_health_wrapper",
    tags = ["manual"],
)

sh_test(
    name = "smoke_test_bin",
    srcs = ["smoke_test.sh"],
    tags = ["manual"],
)

service_test(
    name = "smoke_test",
    services = [":nats_install_svc"],
    test = ":smoke_test_bin",
    tags = [
        "manual",
        "no-sandbox",
        "requires-network",
    ],
)
